NRV-85: fixed Napo in the workplace: small white space

--- a/docroot/sites/all/themes/napo_frontend/less/revamp.less
+++ b/docroot/sites/all/themes/napo_frontend/less/revamp.less
@@ -2211,7 +2211,7 @@ h1.page-header{
 		  	flex-direction: row;
 	  	  justify-content: space-between;
 		  	.lessons-item{
-		  		 min-height: 26rem;
+		  		 min-height: auto;
 		  		a{
 		  			height: auto;
 		  		}
